--- a/style.css
+++ b/style.css
@@ -73,8 +73,17 @@ form {
   width: 80%;
   margin: 0 auto;
   position: sticky;
-  z-index: 2;
+  z-index: 3;
   color: var(--pearl);
+}
+.nav a {
+  text-decoration: none;
+  color: var(--pearl);
+}
+
+.nav a:hover {
+  cursor: pointer;
+  color: var(--coral);
 }
 .logo {
   font-family: 'Jurassic Park', sans-serif;
@@ -109,6 +118,11 @@ form {
 .header-title {
   font-family: 'Jurassic Park', sans-serif;
   font-size: 154px;
+}
+.header-subtitle {
+  margin-top: -40px;
+  margin-left: 62px;
+  font-weight: 600;
 }
 .header-text-container {
   color: var(--pearl);
@@ -150,14 +164,24 @@ form {
   justify-content: center;
   align-items: center;
   z-index: 2;
+  position: relative;
+}
+.chevron-container:hover {
+  background: var(--coral);
+  cursor: pointer;
+}
+
+#about-us {
+  text-decoration: none;
 }
 
 .room-container,
-.about-us-container,
-.activities-container {
+.about-us-container {
   padding: 80px 0px;
 }
-
+.activities-container {
+  padding: 80px 0px 120px 0px;
+}
 .card-container {
   display: flex;
   gap: 10px;
@@ -271,4 +295,146 @@ form {
   align-items: center;
   width: 100%;
   height: 100%;
+}
+.activities-text {
+  width: 50%;
+}
+.activities-description {
+  width: 100%;
+  font-weight: 100;
+  font-size: 20px;
+}
+.activities-images {
+  width: 50%;
+  position: relative;
+}
+
+.activities-images img {
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  object-fit: cover;
+}
+.content-container-activities {
+  gap: 60px;
+  display: flex;
+}
+
+.activities-button {
+  position: absolute;
+  width: 100%;
+  right: 10%;
+  bottom: 48px;
+  background: var(--coral);
+  display: flex;
+  padding: 10px 30px;
+  text-decoration: none;
+  color: var(--pearl);
+  transition: all 0.3s ease;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+.activities-button:hover {
+  transform: scale(1.1);
+}
+.coral-background {
+  background: var(--coral);
+  color: var(--pearl);
+}
+
+.footer {
+  width: 80%;
+  margin: 0 auto;
+  padding: 80px 0px 40px 0px;
+  position: relative;
+}
+.footer-container {
+  display: flex;
+  gap: 7%;
+  justify-content: center;
+  padding-top: 40px;
+  border-top: var(--sand) solid 1px;
+}
+.sign-up {
+  position: absolute;
+  width: 100%;
+  background: var(--coral);
+  color: var(--pearl);
+  top: -40px;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+.sign-up form {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  width: 100%;
+  padding: 15px;
+}
+.sign-up input {
+  border: none;
+  border-radius: 6px;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+}
+.sign-up button {
+  border: none;
+  width: 20%;
+  background: var(--ocean);
+  color: var(--pearl);
+  display: flex;
+  padding: 10px 30px;
+  text-decoration: none;
+  color: var(--pearl);
+  transition: all 0.3s ease;
+  border-radius: 6px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-title {
+  margin-bottom: 15px;
+  font-weight: 700;
+}
+.footer-links,
+.social {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.social a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer a {
+  text-decoration: none;
+  color: var(--gun-powder);
+}
+
+.footer a:hover {
+  color: var(--coral);
+}
+.contact-us {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.copyright {
+  text-align: center;
+  font-size: 14px;
+  width: 80%;
+  border-top: var(--sand) solid 1px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.button:hover {
+  background: #e15353;
 }
