--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ input[type='text'] {
   background-size: cover;
   background-position: 50% 70%;
   position: relative;
-  margin-top: -65px;
+  margin-top: -90px;
 }
 .container {
   margin: 0 auto;
@@ -74,7 +74,7 @@ input[type='text'] {
   margin-top: -30px;
   padding: 20px;
   position: relative;
-  z-index: 5;
+  z-index: 2;
   background: #d1cbcc;
   border-radius: 6px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
@@ -122,49 +122,89 @@ input[type='text'] {
 }
 /**/
 /*nav*/
-.nav {
+
+.nav-bar {
+  width: 80%;
   display: flex;
   justify-content: space-between;
-  width: 80%;
-  margin: 0 auto;
-  position: sticky;
+  align-items: center;
+  list-style: none;
+  position: relative;
+  padding: 12px 0px;
   z-index: 3;
-  color: var(--pearl);
+  margin: 0 auto;
 }
-.nav a {
+.menu {
+  display: flex;
+}
+.menu li {
+  padding-left: 40px;
+}
+.menu li a {
+  display: inline-block;
   text-decoration: none;
   color: var(--pearl);
+  text-align: center;
+  transition: 0.15s ease-in-out;
+  position: relative;
+  text-transform: uppercase;
+}
+.menu li a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: var(--pearl);
+  transition: 0.15s ease-in-out;
 }
 
-.nav a:hover {
-  cursor: pointer;
-  color: var(--coral);
+.menu li a:hover:after {
+  width: 100%;
 }
+
+.open-menu,
+.close-menu {
+  position: absolute;
+  color: var(--pearl);
+  cursor: pointer;
+  font-size: 1.5rem;
+  display: none;
+}
+
+.open-menu {
+  right: 15px;
+}
+.close-menu {
+  top: 15px;
+  right: 15px;
+}
+
+#check {
+  display: none;
+}
+
 .logo {
   font-family: 'Jurassic Park', sans-serif;
   font-size: 64px;
 }
-.options {
-  display: flex;
-  justify-content: space-around;
-  gap: 20px;
-  align-items: center;
+.logo a {
+  text-decoration: none;
+  color: var(--pearl);
 }
-/**/
 
 .index-header-image {
   height: 100vh;
   background-size: cover;
   background-position: center;
   position: relative;
-  margin-top: -65px;
+  margin-top: -90px;
 }
 .header-title {
-  font-family: 'Jurassic Park', sans-serif;
-  font-size: 154px;
+  font-size: 64px;
 }
 .header-subtitle {
-  margin-top: -40px;
   margin-left: 62px;
   font-weight: 600;
 }
@@ -192,22 +232,29 @@ input[type='text'] {
   opacity: 0.45;
 }
 .chevron-container {
-  width: 25px;
-  height: 25px;
+  font-size: 1.5em;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
   background: var(--pearl);
   border-radius: 50%;
   color: var(--gun-powder);
-  padding: 5p;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 2;
   position: relative;
 }
+.chevron-container a {
+  text-decoration: none;
+  color: var(--gun-powder);
+  transition: 0.5s ease-in-out;
+}
 .chevron-container:hover {
   background: var(--coral);
   cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 #about-us {
@@ -667,9 +714,6 @@ input[type='checkbox']:checked {
   font-weight: 600;
   margin-bottom: 15px;
 }
-.activities-container {
-  padding: 80px 0px;
-}
 .activity-description {
   padding: 15px;
 }
@@ -682,6 +726,14 @@ input[type='checkbox']:checked {
 /**/
 
 @media (max-width: 768px) {
+  .header-title {
+    font-size: 44px;
+  }
+  .chevron-container {
+    font-size: 1em;
+    width: 25px;
+    height: 25px;
+  }
   .about-us-container {
     flex-direction: column;
   }
@@ -722,6 +774,12 @@ input[type='checkbox']:checked {
   .about-us {
     padding-bottom: 40px;
   }
+
+  .about-us,
+  .container-title {
+    font-size: 48px;
+  }
+
   /*room page*/
   .room-activities-card {
     width: 100%;
@@ -752,5 +810,56 @@ input[type='checkbox']:checked {
   .form-div input[type='text'] {
     padding: 10px 10px 10px 37px;
     font-size: 14px;
+  }
+
+  /**/
+  .nav-bar {
+    width: 100%;
+    margin: 0;
+    padding: 15px;
+    align-items: center;
+  }
+  .menu {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 100;
+    background-color: var(--coral);
+    transition: all 0.2s ease-in-out;
+  }
+  .menu li {
+    margin-top: 40px;
+    padding-left: 0px;
+  }
+  .menu li a {
+    padding: 10px;
+  }
+  .open-menu,
+  .close-menu {
+    display: block;
+  }
+  .close-menu {
+    top: 25px;
+  }
+  #check:checked ~ .menu {
+    right: 0;
+  }
+  .logo {
+    font-size: 48px;
+  }
+  /*activity page*/
+  .activity-card {
+    flex-direction: column;
+  }
+  .activity-card img {
+    width: 100%;
+  }
+  .header-image.activities {
+    background-position: 20% 70%;
   }
 }
