--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ input[type='text'] {
   background-position: 50% 70%;
   position: relative;
   margin-top: -90px;
+  transition: background-image 1s ease-in-out;
 }
 .container {
   margin: 0 auto;
@@ -119,6 +120,45 @@ input[type='text'] {
 }
 .small-image:hover {
   border: 2px solid var(--coral);
+}
+.discount-container {
+  padding-bottom: 40px;
+}
+.discounts {
+  display: flex;
+  justify-content: space-around;
+  gap: 15px;
+}
+.discount {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-mask-image: radial-gradient(
+      circle at 37px 8px,
+      transparent 8px,
+      red 8.5px
+    ),
+    radial-gradient(closest-side circle at 50%, red 99%, transparent 100%);
+  -webkit-mask-size: 100%, 5px 9px;
+  -webkit-mask-repeat: repeat, repeat-y;
+  -webkit-mask-position: 0 -8px, 34.5px;
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  height: 100px;
+  background: var(--coral);
+  color: var(--pearl);
+  border-radius: 6px;
+  width: 100%;
+}
+.discount-description {
+  margin-left: 30%;
+  padding-right: 10%;
+}
+.subtotal {
+  margin: 4px 0px;
+}
+.discountTotal {
+  color: var(--coral);
 }
 /**/
 /*nav*/
@@ -810,6 +850,14 @@ input[type='checkbox']:checked {
   .form-div input[type='text'] {
     padding: 10px 10px 10px 37px;
     font-size: 14px;
+  }
+  .discounts {
+    flex-direction: column;
+  }
+  .discount-description {
+    margin: 0;
+    padding: 0;
+    padding: 0px 0px 0px 44px;
   }
 
   /**/
