--- a/style.css
+++ b/style.css
@@ -144,6 +144,13 @@ input[type='email'] {
   -webkit-mask-repeat: repeat, repeat-y;
   -webkit-mask-position: 0 -8px, 34.5px;
   -webkit-mask-composite: source-out;
+  /*mask defined for other browsers*/
+  mask-image: radial-gradient(circle at 37px 8px, transparent 8px, red 8.5px),
+    radial-gradient(closest-side circle at 50%, red 99%, transparent 100%);
+  mask-size: 100%, 5px 9px;
+  mask-repeat: repeat, repeat-y;
+  mask-position: 0 -8px, 34.5px;
+  mask-composite: source-out;
   mask-composite: subtract;
   height: 100px;
   background: var(--coral);
